chore(workspace): fix color contrast issue in page component example

--- a/src/site/workspace.scss
+++ b/src/site/workspace.scss
@@ -349,12 +349,6 @@ html {
     border: 2px dashed #393f44;
   }
 
-  .pf-c-page__header-tools,
-  .pf-c-page__header-nav {
-    color: #393f44;
-  }
-
-
   .pf-l-grid > * {
     box-shadow: 0 0 0 1px #ddd;
   }
